--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
     // var disqus_identifier = 'unique_dynamic_id_1234';
-    var disqus_url = 'http://nonfiction.ca/' + {{ post.url }};
+    var disqus_url = 'http://nonfiction.ca/' + {{ site.baseurl }}{{ post.url }};
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
