--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<div id="smbuttons">
+  <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=232187573461711&amp;xfbml=1"></script><fb:like href="{{ site.baseurl }}{{ page.url }}" send="true" width="450" show_faces="false" font=""></fb:like>
+</div>
 <div id="post">
 {{ content }}
 </div>
