--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div id="smbuttons">
+  <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="nonfictionyyc" data-related="darron:alkema">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
   <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=232187573461711&amp;xfbml=1"></script><fb:like href="{{ site.baseurl }}{{ page.url }}" send="true" width="450" show_faces="false" font=""></fb:like>
 </div>
 <div id="post">
