--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
   <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="nonfictionyyc" data-related="darron:alkema">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
   <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=232187573461711&amp;xfbml=1"></script><fb:like href="{{ site.baseurl }}{{ page.url }}" send="true" width="450" show_faces="false" colorscheme="dark" font=""></fb:like>
 </div>
+<div id="author">By <a href="{{page.author-link}}" target="_blank">{{}}{{page.author}}</a> on {{ page.date | date_to_long_string }}</div>
 <div id="post">
 {{ content }}
 </div>
