--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:og="http://ogp.me/ns#"
+      xmlns:fb="https://www.facebook.com/2008/fbml">
 	<head>
 	  <base href="http://nonfiction.ca/" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 						<title>nonfiction studios - Blog {% if page.title %} - {{ page.title }}{% endif %}</title>
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% endif %}"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}"/>
+    <meta property="og:image" content="http://nonfiction.ca/blog/images/nonfiction-icon.jpg"/>
+    <meta property="og:site_name" content="nonfiction studios inc. blog"/>
 		<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/javascripts/s2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/javascripts/application.js" type="text/javascript"></script>
